--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://cpromise.github.io/HorizonPractice",
   "name": "horizon-ui-chakra",
   "version": "2.0.0",
   "private": true,
