--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://cpromise.github.io/HorizonPractice",
+  "homepage": "https://github.daumkakao.com/pages/max-max/TalkiOSDashboard/",
   "name": "horizon-ui-chakra",
   "version": "2.0.0",
   "private": true,
